--- a/index.html
+++ b/index.html
@@ -28,10 +28,21 @@
     
     <main>
         <div class="container-fluid">
+
+            <div class="row">
+                <div class="col-md-4 col-sm-12 text-center"> 
+                    <h2>Que es valorant?</h2>
+                </div>
+                <div class="col-md-8 col-sm-12">
+                    <p></p>
+                </div>
+
+            </div>
+
+
             <div class="row">
                 
                 <div class="col-md-4 col-sm-12 textoIndex"> 
-                    <div><h2 class="">Que es valorant?</h2></div>
                     <div>
                     <p>Se trata de un juego de disparos en primera persona (FPS) multijugador 5v5 donde un equipo ataca y el otro defiende. El modo de juego principal, Buscar y destruir, es muy similar a CS:GO. El objetivo del equipo atacante es colocar una bomba (llamada pincho) y hacer que detone, mientras que el equipo defensor intenta evitarlo. Independiente de si se planta la guerra o no, si un escuadrón es eliminado antes de que se cumpla cualquier otra condición de victoria, el escuadrón contrario ganará.</p>
 
@@ -45,8 +56,7 @@
                     </div>
                 </div>
                 <div class="col-md-8 col-sm-12">
-                    <div class="col-md-12"></div>
-                    <div class="col-md-12"><iframe width="1200" height="630" src="https://www.youtube.com/embed/dTujgsphVkY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                    <iframe width="1200" height="630" src="https://www.youtube.com/embed/dTujgsphVkY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -56,5 +66,7 @@
             <p>Todos los dolares para mi.</p>
         </div>
     </footer>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
