--- a/galeria.html
+++ b/galeria.html
@@ -30,13 +30,13 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/Ascent.jpg" class="d-block w-100" alt="...">
+                        <img src="img/Ascent.jpg" class="d-block w-100" alt="Imagen mapa Ascent">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/Bind.jpeg" class="d-block w-100" alt="...">
+                        <img src="img/Bind.jpeg" class="d-block w-100" alt="Imagen mapa Bind">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/Breeze.jpeg" class="d-block w-100" alt="...">
+                        <img src="img/Breeze.jpeg" class="d-block w-100" alt="Imagen mapa Breeze">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
