Agruegue boton de descarga, animacion en pestaña de descarga y fondo. Hay que arreglar el fondo

--- a/agentes.html
+++ b/agentes.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="container-fluid fondo">
     <header>
         <nav>
             <ul class="botones">
@@ -72,10 +72,6 @@
             
             </div>
         </div>
-<!-- BUSCAR COMO HACER QUE SE DESPLIEGUEN UNO AL LADO DEL OTRO. INVESTIGAR FLEX Y GRID -->
-
-<!-- ShoutOut a la tutora Lucila que me ayudo a descubrir la existencia de las cards <3 -->
-
     </main>
 
     <footer>
