arregle el fondo para que no se repita y abarque toda la pestaña

--- a/descarga.html
+++ b/descarga.html
@@ -27,11 +27,11 @@
     </header>
     <main>
         <div data-aos="zoom-in" class="jugaYa">
-            <h2>JUGA AHORA</h2>
+            <p>JUGA AHORA</p>
         </div>
 
         <div class="d-grid gap-2 col-6 mx-auto">
-            <button type="button" class="btn btn-outline-danger btn-lg">
+            <button type="button" class="btn btn-danger btn-lg">
                 <a href="https://playvalorant.com/es-mx/">Descarga</a>
             </button>
         </div>
