--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/valorant logo.png" type="image/x-icon">
 </head>
-<body class="container-fluid fondo">
+<body class="container-fluid">
     <header>
         <nav>
             <ul class="botones">
