cambios en el navbar con bootstrap

--- a/agentes.html
+++ b/agentes.html
@@ -12,14 +12,28 @@
 </head>
 <body class="container-fluid fondo">
     <header>
-        <nav>
-            <ul class="botones">
-                <li class="link"><a href="index.html">Inicio</a></li>
-                <li class="link"><a href="agentes.html">Agentes</a></li>
-                <li class="link"><a href="galeria.html">Galeria</a></li>
-                <li class="link"><a href="descarga.html">Descarga</a></li>
-                <li class="link"><a href="contacto.html">Contactanos</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="agentes.html">Agentes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="galeria.html">Galeria</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="descarga.html">Descarga</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html">Contactanos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
 
         <h1 class="tituloPrincipal">Valorant</h1>
