--- a/descarga.html
+++ b/descarga.html
@@ -13,26 +13,37 @@
 </head>
 <body class="container-fluid fondo">
     <header>
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar bg-light fixed-top">
             <div class="container-fluid">
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                        <div class="offcanvas-header">
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="agentes.html">Agentes</a>
                         </li>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="galeria.html">Galeria</a>
                         </li>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="descarga.html">Descarga</a>
+                        </li>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contacto.html">Contactanos</a>
                         </li>
                     </ul>
+                    </div>
                 </div>
             </div>
         </nav>
