cambio de imagenes

--- a/index.html
+++ b/index.html
@@ -58,22 +58,24 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-4 col-sm-12 textoIndex"> 
-                <div>
-                    <p>Se trata de un juego de disparos en primera persona (FPS) multijugador 5v5 donde un equipo ataca y el otro defiende. El modo de juego principal, Buscar y destruir, es muy similar a CS:GO. El objetivo del equipo atacante es colocar una bomba (llamada pincho) y hacer que detone, mientras que el equipo defensor intenta evitarlo. Independiente de si se planta la guerra o no, si un escuadrón es eliminado antes de que se cumpla cualquier otra condición de victoria, el escuadrón contrario ganará.</p>
+        <div class="textoIndex container-fluid">
+            <div class="row">
+                <div class="col-md-4 col-sm-12"> 
+                    <div>
+                        <p>Se trata de un juego de disparos en primera persona (FPS) multijugador 5v5 donde un equipo ataca y el otro defiende. El modo de juego principal, Buscar y destruir, es muy similar a CS:GO. El objetivo del equipo atacante es colocar una bomba (llamada pincho) y hacer que detone, mientras que el equipo defensor intenta evitarlo. Independiente de si se planta la guerra o no, si un escuadrón es eliminado antes de que se cumpla cualquier otra condición de victoria, el escuadrón contrario ganará.</p>
 
-                    <p>Los partidos tienen una duración de 25 rondas, y cada una dura 100 segundos. El primer equipo en ganar 13 rondas gana el partido en general. Al comienzo de la ronda, tendrás 30 segundos para comprar armas y equipo para esa ronda. Si mueres en una ronda, tendrás que esperar hasta la siguiente para esa ronda. Si mueres en una ronda. Tendrás que esperar hasta la siguiente ronda para reaparecer. Este modo de juego principal se puede jugar en partidas clasificadas o no clasificadas.</p>
+                        <p>Los partidos tienen una duración de 25 rondas, y cada una dura 100 segundos. El primer equipo en ganar 13 rondas gana el partido en general. Al comienzo de la ronda, tendrás 30 segundos para comprar armas y equipo para esa ronda. Si mueres en una ronda, tendrás que esperar hasta la siguiente para esa ronda. Si mueres en una ronda. Tendrás que esperar hasta la siguiente ronda para reaparecer. Este modo de juego principal se puede jugar en partidas clasificadas o no clasificadas.</p>
 
-                    <p>Suena como el modo de juego Defuse de CS: GO, pero Riot tiene un giro en la fórmula. Además de comprar armas, también elegirás un Agente al comienzo de cada ronda. Cada agente tiene una habilidad que va desde curar los aliados hasta hacer que aparezcan muros de la nada. Teniendo en cuenta que Valorant adopta un enfoque basado en MOBA para los agentes, es probable que necesites una buena variedad de habilidades si quieres ganar una partida. Sin embargo, ten en cuenta que deberás comprar algunas habilidades al comienzo de una ronda.</p>
+                        <p>Suena como el modo de juego Defuse de CS: GO, pero Riot tiene un giro en la fórmula. Además de comprar armas, también elegirás un Agente al comienzo de cada ronda. Cada agente tiene una habilidad que va desde curar los aliados hasta hacer que aparezcan muros de la nada. Teniendo en cuenta que Valorant adopta un enfoque basado en MOBA para los agentes, es probable que necesites una buena variedad de habilidades si quieres ganar una partida. Sin embargo, ten en cuenta que deberás comprar algunas habilidades al comienzo de una ronda.</p>
 
-                    <p>Desde su lanzamiento, Valorant ha agregado el modo de juego Spike Rush. Este es un modo más rápido, al mejor de siete rondas, donde cada atacante está equipado con un pincho y todos los jugadores tiene la misma arma y todas sus habilidades; no hay ronda de compra.</p>
+                        <p>Desde su lanzamiento, Valorant ha agregado el modo de juego Spike Rush. Este es un modo más rápido, al mejor de siete rondas, donde cada atacante está equipado con un pincho y todos los jugadores tiene la misma arma y todas sus habilidades; no hay ronda de compra.</p>
 
-                    <p>Las temporadas de Valorant se conocen como Acts, y cada una de ellas traerá nuevas incorporaciones al juego, incluidos nuevos agentes, mapas y modos.</p>
+                        <p>Las temporadas de Valorant se conocen como Acts, y cada una de ellas traerá nuevas incorporaciones al juego, incluidos nuevos agentes, mapas y modos.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-8 col-sm-12">
-                    <iframe width="1200" height="630" src="https://www.youtube.com/embed/dTujgsphVkY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="col-md-8 col-sm-12">
+                        <iframe width="1200" height="630" src="https://www.youtube.com/embed/dTujgsphVkY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </div>
         </div>
     </main>
