--- a/galeria.html
+++ b/galeria.html
@@ -53,13 +53,22 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/Ascent.jpg" class="d-block w-100" alt="Imagen mapa Ascent">
+                        <img src="img/Ascent.webp" class="d-block w-100" alt="Imagen mapa Ascent">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/Bind.jpeg" class="d-block w-100" alt="Imagen mapa Bind">
+                        <img src="img/Bind.webp" class="d-block w-100" alt="Imagen mapa Bind">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/Breeze.jpeg" class="d-block w-100" alt="Imagen mapa Breeze">
+                        <img src="img/Breeze.webp" class="d-block w-100" alt="Imagen mapa Breeze">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/Fracture.jpg" class="d-block w-100" alt="Imagen mapa Breeze">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/Haven.png" class="d-block w-100" alt="Imagen mapa Breeze">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/Icebox.jpg" class="d-block w-100" alt="Imagen mapa Breeze">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
