agregue h2 en todos los html

--- a/galeria.html
+++ b/galeria.html
@@ -49,6 +49,9 @@
         <h1 class="tituloPrincipal">Valorant</h1>
     </header>
     <main>
+        <div class="container-fluid">
+            <h2>Galeria de mapas</h2>
+        </div>
         <div class="galeriaImagen">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
