--- a/agentes.html
+++ b/agentes.html
@@ -49,6 +49,9 @@
         <h1 class="tituloPrincipal">Valorant</h1>
     </header>
     <main>
+        <div class="container-fluid">
+            <h2>Agentes</h2>
+        </div>
         <div class="container text-center">
             <div class="row">
                 <p>Hay 4 categorias para jugar:</p>
