--- a/descarga.html
+++ b/descarga.html
@@ -17,7 +17,7 @@
         <div class="collapse" id="navbarToggleExternalContent">
             <div class="bg-dark p-4">
                 <div class="link container-fluid">
-                    <ul class="navbar-nav me-auto mb-lg-0>
+                    <ul class="nav navbar-right>
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Inicio</a>
                         </li>
@@ -51,7 +51,7 @@
     </header>
     <main>
         <div data-aos="zoom-in" class="jugaYa">
-            <p>JUGA AHORA</p>
+            <h2>JUGA AHORA</h2>
         </div>
 
         <div class="d-grid gap-2 col-6 mx-auto">
