--- a/galeria.html
+++ b/galeria.html
@@ -16,7 +16,7 @@
         <div class="collapse" id="navbarToggleExternalContent">
             <div class="bg-dark p-4">
                 <div class="link container-fluid">
-                    <ul class="navbar-nav me-auto mb-lg-0>
+                    <ul class="nav navbar-right>
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Inicio</a>
                         </li>
