--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/valorant logo.png" type="image/x-icon">
 </head>
@@ -15,23 +16,23 @@
     <header>
         <div class="collapse" id="navbarToggleExternalContent">
             <div class="bg-dark p-4">
-                <div class="link container-fluid">
-                    <ul class="navbar-nav me-auto mb-lg-0>
+                <div class="container-fluid colorNavbar">
+                    <ul class="nav navbar-right">                       
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                        </li>
+                        </li>                       
                         <li class="nav-item">
                             <a class="nav-link" href="agentes.html">Agentes</a>
-                        </li>
+                        </li>                                               
                         <li class="nav-item">
                             <a class="nav-link" href="galeria.html">Galeria</a>
-                        </li>
+                        </li>                                            
                         <li class="nav-item">
                             <a class="nav-link" href="descarga.html">Descarga</a>
-                        </li>
+                        </li>                                                
                         <li class="nav-item">
                             <a class="nav-link" href="contacto.html">Contactanos</a>
-                        </li>
+                        </li>                        
                     </ul>
                 </div>
             </div>
@@ -74,10 +75,16 @@
                     </div>
                 </div>
                 <div class="col-md-8 col-sm-12">
-                        <iframe width="1200" height="630" src="https://www.youtube.com/embed/dTujgsphVkY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="video">
+                        <iframe width="1200" height="630" src="https://www.youtube.com/embed/dTujgsphVkY" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
         </div>
+
+
+        <!-- width="1200" height="630" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"-->
     </main>
     <footer>
         <div>
