--- a/descarga.html
+++ b/descarga.html
@@ -51,7 +51,7 @@
     </header>
     <main>
         <div data-aos="zoom-in" class="jugaYa">
-            <h2>JUGA AHORA</h2>
+            <p>JUGA AHORA</p>
         </div>
 
         <div class="d-grid gap-2 col-6 mx-auto">
