--- a/index.html
+++ b/index.html
@@ -76,20 +76,28 @@
                 </div>
                 <div class="col-md-8 col-sm-12">
                     <div class="video">
-                        <iframe width="1200" height="630" src="https://www.youtube.com/embed/dTujgsphVkY" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+                        <iframe class="videoResponsive" src="https://www.youtube.com/embed/dTujgsphVkY" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
         </div>
 
 
-        <!-- width="1200" height="630" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"-->
     </main>
     <footer>
-        <div>
-            <p>Todos los dolares para mi.</p>
-        </div>
+        <!-- <div>
+            <ul class="redes">
+                <li>
+                    <a href="https://www.instagram.com/esvalorant/">Instagram</a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/VALORANTes">Twitter</a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/esVALORANT/">Facebook</a>
+                </li>
+            </ul>
+        </div> -->
     </footer>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
