--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     </main>
     <footer>
-        <!-- <div>
+        <div>
             <ul class="redes">
                 <li>
                     <a href="https://www.instagram.com/esvalorant/">Instagram</a>
@@ -97,7 +97,7 @@
                     <a href="https://www.facebook.com/esVALORANT/">Facebook</a>
                 </li>
             </ul>
-        </div> -->
+        </div>
     </footer>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
