--- a/descarga.html
+++ b/descarga.html
@@ -54,8 +54,8 @@
             <p>JUGA AHORA</p>
         </div>
 
-        <div class="d-grid gap-2 col-6 mx-auto">
-            <button type="button" class="btn btn-danger btn-lg">
+        <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+            <button type="button" class="btn btn-dark btn-lg">
                 <a href="https://playvalorant.com/es-mx/">Descarga</a>
             </button>
         </div>
