armado de diseño de página de contaco

--- a/contacto.html
+++ b/contacto.html
@@ -48,23 +48,39 @@
 
         <h1 class="tituloPrincipal">Valorant</h1>
     </header>
+
     <main>
-        <h2>Contactanos!</h2>
-        <form>
-            <div>
-                <label for="nombre">Nombre</label>
-                <input type="text"  id="nombre">
-                <label for="mail">Mail</label>
-                <input type="text"  id="mail">
-            </div>
-            <div>
-                <p>Dejanos tu consulta</p>
-                <textarea name="" id="" cols="30" rows="10"></textarea>
-            </div>
-            <div>
-                <button>Enviar</button>
-            </div>
-        </form>
+        <h2 class="text-center">Contactanos!</h2>
+        <div class="container-fluid">
+            <form class="row formulario">
+                <div class="col-md-2 col-sm-12">
+                    <p></p>
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <div>
+                        <label for="nombre" class="form-label">Nombre</label>
+                        <input type="text"  id="nombre" size="31">
+                    </div>
+                    <div>
+                        <label for="mail" class="form-label">Mail</label>
+                        <input type="email" id="mail" placeholder="nombre@ejemplo.com" size="35">
+                    </div>
+                    <div>
+                        <p>Dejanos tu consulta</p>
+                            <textarea name="" id="" cols="40" rows="2"></textarea>
+                    </div>
+                    <div>
+                        <button>Enviar</button>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <img class="sageRes" src="./img/sageRes.png" alt="Valorant Sage Ultimate">
+                </div>
+                <div class="cool-md-2 col-sm-12">
+                    <p></p>
+                </div>
+            </form>
+        </div>
     </main>
     <footer>
         <div>
