--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main>
         <div class="row">
             <div class="col-md-4 col-sm-12 text-center"> 
-                <h2>Que es valorant?</h2>
+                <h2 class="queEs">Que es valorant?</h2>
             </div>
             <div class="col-md-8 col-sm-12">
                 <p></p>
@@ -84,7 +84,7 @@
 
 
     </main>
-    <footer>
+    <footer class="">
         <div>
             <ul class="redes">
                 <li>
