uso de fuente nueva

--- a/contacto.html
+++ b/contacto.html
@@ -46,7 +46,7 @@
             </div>
         </nav>
 
-        <h1 class="tituloPrincipal">Valorant</h1>
+        <h1 class="tituloPrincipal">vAlorant</h1>
     </header>
 
     <main>
