--- a/descarga.html
+++ b/descarga.html
@@ -47,7 +47,7 @@
             </div>
         </nav>
 
-        <h1 class="tituloPrincipal">Valorant</h1>
+        <h1 class="tituloPrincipal">vAlorant</h1>
     </header>
     <main>
         <div data-aos="zoom-in" class="jugaYa">
