--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </nav>
 
-    <h1 class="tituloPrincipal">Valorant</h1>
+    <h1 class="tituloPrincipal">vAlorant</h1>
     </header>
     <main>
         <div class="row">
